Double checked and fixed page spacing and footer placement to be at bottom at all time.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h2 {
 .container {
     background-image: url("../images/gravel.png");
     border-top: 2px solid #c2c2c2;
-    min-height: 100vh;
+    min-height: 100%;
     margin: 0 auto;
     clear: both;
     overflow: hidden;
